--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -601,7 +601,7 @@ $sidebar-display: "sidebar-display";
   overflow-y: auto;
   width: $sidebar-width-medium;
   z-index: 99;
-  background: #193162;
+  background: #05264c;
 
   a {
     @include sidebar-links;
