--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -35,6 +35,11 @@
         ['$$', '$$'],
         ['\\[', '\\]']
       ]
+    },
+    tex2jax: {
+      skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+      displayMath: [['$$','$$']],
+      inlineMath: [['$','$']],
     }
   };
   </script>
